# compression_round_tripping

./: .gitignore  README.md  apptainer_image.def  pyproject.toml  run_benchmark_slurm.sh
src/compression_round_tripping/: main.py  run_benchmark_compression.py
